# orc-haskell

./: .gitmodules  ChangeLog.md  LICENSE  README.md  aclocal.m4  cabal.project  configure  configure.ac  optimised-row-columnar.cabal  orc-haskell.cabal
.github/workflows/: haskell.yml
benchmarks/: bench.hs
csrc/: bytes.c  bytes.h  floats.c  floats.h  integers.c  integers.h  snappy-c-raw.cc
include/: config.h.in
main/: main.hs
src/: Yolo.hs
src/Orc/: Hey  Logical.hs  Prelude.hs  Seek.hs  Striped.hs
src/Orc/Data/: Data.hs  Segmented.hs  Striped.hs  Time.hs
src/Orc/Encodings/: Bytes.hs  Compression.hs  Integers.hs  Primitives.hs
src/Orc/Exception/: Raising.hs  Type.hs
src/Orc/Schema/: Types.hs
src/Orc/Schema/Protobuf/: Definitions.hs
src/Orc/Serial/: Logical.hs  Seek.hs
src/Orc/Serial/Binary/: Base.hs  Logical.hs  Striped.hs
src/Orc/Serial/Binary/Internal/: Bytes.hs  Compression.hs  Floats.hs  Get.hs  Integers.hs  OrcNum.hs  Put.hs
src/Orc/Serial/Binary/Internal/Compression/: Snappy.hs
src/Orc/Serial/Binary/Internal/Integers/: Native.hs
src/Orc/Serial/Encodings/: Bytes.hs  Compression.hs  Get.hs  Integers.hs  OrcNum.hs  Primitives.hs
src/Orc/Serial/Json/: Logical.hs
src/Orc/Serial/Protobuf/: Schema.hs
src/Orc/Serial/Protobuf/Schema/: Definitions.hs
src/Orc/Table/: Convert.hs  Logical.hs  Striped.hs
src/Orc/X/: Streaming.hs  Vector.hs
src/Orc/X/Vector/: Segment.hs  Transpose.hs
src/Viking/Stream/: Cereal.hs
test/: test.hs
test/Test/Orc/: Logical.hs  Streaming.hs  Type.hs
test/Test/Orc/Data/: Time.hs
test/Test/Orc/Memory/: Leaks.hs
test/Test/Orc/Streams/: Bytes.hs  Integer.hs
test/Test/Viking/Stream/: Cereal.hs
